docs: update Java vs Go comparison tables for 2026
- Refresh appendix tables with 2026 data and new features
- Add Java 25 optimized configurations (Leyden/Native, Generational ZGC)
- Include Go 1.25 Green Tea GC and other stable features
- Update latency requirements and cost comparison metrics
- Remove outdated deployment characteristics in favor of standard vs optimized comparison